--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "http://localhost:3000/api/v1",
+  "apiUrl": "http://localhost:3000/api/",
   "loginUrl": "http://innova.1704.dev.tipsalud.local/Asistencial/LogisticaDePaciente/IntegracionPortalApi"
 }
