--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
-    "@angular/material": "^15.2.9",
+    "@angular/material": "~15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "openai": "^3.3.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.11",
     "tslib": "^2.3.0",
