--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^16.1.2",
     "@angular/platform-browser-dynamic": "^16.1.2",
     "@angular/router": "^16.1.2",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "font-awesome": "^4.7.0",
+    "openai": "^3.3.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.11",
     "tslib": "^2.3.0",
