--- a/docs/assets/config.json
+++ b/docs/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "apiUrl": "http://localhost:3000/api/",
+  "apiUrl": "https://demoelecciones-lxz424aadq-rj.a.run.app//api/",
   "loginUrl": "http://innova.1704.dev.tipsalud.local/Asistencial/LogisticaDePaciente/IntegracionPortalApi"
 }
