--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "dotenv": "^16.3.1",
     "font-awesome": "^4.7.0",
+    "highcharts": "^11.1.0",
     "openai": "^3.3.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.1",
